[package]
name = "text_weather"
version = "0.1.0"
authors = ["Richard Bradshaw <merryidleness@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
clap = "2.33"
quick-xml = "0.22"
reqwest = { version = "0.11", features = ["blocking"] }
url = "2.2.2"
